// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CWVMetricsSummary > renders Network Request Summary when network-requests audit exists 1`] = `
<details>
  <summary
    class="flex flex-col gap-2"
  >
    <h3
      class="text-xl font-semibold"
    >
      Summary Metrics
    </h3>
  </summary>
  <div
    class="grid grid-cols-1 gap-3 py-3  md:grid-cols-2 lg:grid-cols-3"
  >
    <div>
      <div>
        Core Web Vitals
      </div>
      <div
        class="w-full"
      >
        <div
          class="mb-2 flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
            title="Copy table"
            type="button"
          >
            <svg
              class="lucide lucide-copy h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Copy table
            </span>
          </button>
        </div>
        <table>
          <thead>
            <tr>
              <th />
              <th>
                Mobile
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                 
                First Contentful Paint
                 
              </td>
              <td>
                <span>
                  500
                   ms
                </span>
              </td>
            </tr>
            <tr>
              <td>
                 
                Largest Contentful Paint
                 
              </td>
              <td>
                <span>
                  1500
                   ms
                </span>
              </td>
            </tr>
            <tr>
              <td>
                 
                Total Blocking Time
                 
              </td>
              <td>
                <span>
                  100
                   ms
                </span>
              </td>
            </tr>
            <tr>
              <td>
                 
                Cumulative Layout Shift
                 
              </td>
              <td>
                0.05
              </td>
            </tr>
            <tr>
              <td>
                 
                Cumulative Layout Shift (Main Frame)
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Speed Index
                 
              </td>
              <td>
                <span>
                  1200
                   ms
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
      <div>
        Number of Tasks
      </div>
      <div
        class="w-full"
      >
        <div
          class="mb-2 flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
            title="Copy table"
            type="button"
          >
            <svg
              class="lucide lucide-copy h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Copy table
            </span>
          </button>
        </div>
        <table>
          <thead>
            <tr>
              <th />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                 
                Number of Tasks over 10ms
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Tasks over 25ms
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Tasks over 50ms
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Tasks over 100ms
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Tasks over 500ms
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Top Level Tasks
                 
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
      <div>
        LCP info
      </div>
      <div
        class="w-full"
      >
        <div
          class="mb-2 flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
            title="Copy table"
            type="button"
          >
            <svg
              class="lucide lucide-copy h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Copy table
            </span>
          </button>
        </div>
        <table>
          <thead>
            <tr>
              <th />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                 
                LCP Load Start
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                LCP Load End
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                LCP Invalidated
                 
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
      <div>
        Timings info
      </div>
      <div
        class="w-full"
      >
        <div
          class="mb-2 flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
            title="Copy table"
            type="button"
          >
            <svg
              class="lucide lucide-copy h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Copy table
            </span>
          </button>
        </div>
        <table>
          <thead>
            <tr>
              <th />
              <th>
                Mobile
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                 
                First Contentful Paint
                 
              </td>
              <td>
                <span>
                  500
                   ms
                </span>
              </td>
            </tr>
            <tr>
              <td>
                 
                First contentful paint all frames
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Max Potential FID
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Total Blocking Time
                 
              </td>
              <td>
                <span>
                  100
                   ms
                </span>
              </td>
            </tr>
            <tr>
              <td>
                 
                Largest Contentful Paint
                 
              </td>
              <td>
                <span>
                  1500
                   ms
                </span>
              </td>
            </tr>
            <tr>
              <td>
                 
                Speed Index
                 
              </td>
              <td>
                <span>
                  1200
                   ms
                </span>
              </td>
            </tr>
            <tr>
              <td>
                 
                Interactive
                 
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
      <div>
        Observed Events
      </div>
      <div
        class="w-full"
      >
        <div
          class="mb-2 flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
            title="Copy table"
            type="button"
          >
            <svg
              class="lucide lucide-copy h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Copy table
            </span>
          </button>
        </div>
        <table>
          <thead>
            <tr>
              <th />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                 
                Observed Navigation Start
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Observed First Paint
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Observed First Contentful Paint
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Observed First Contentful Paint All Frames
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Observed Trace End
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Observed Load
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Observed DOM Content Loaded
                 
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
      <div>
        Network Request Summary
      </div>
      <div
        class="w-full"
      >
        <div
          class="mb-2 flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
            title="Copy table"
            type="button"
          >
            <svg
              class="lucide lucide-copy h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Copy table
            </span>
          </button>
        </div>
        <table>
          <thead>
            <tr>
              <th>
                 Request Type
              </th>
              <th>
                 Count
              </th>
              <th>
                 Total Transfer Size
              </th>
              <th>
                 Total Resource Size
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                Script
              </td>
              <td>
                 
                1
                 
              </td>
              <td>
                 
                <span>
                  1000
                   bytes
                </span>
                 
              </td>
              <td>
                 
                <span>
                  800
                   bytes
                </span>
              </td>
            </tr>
            <tr>
              <td>
                Stylesheet
              </td>
              <td>
                 
                1
                 
              </td>
              <td>
                 
                <span>
                  500
                   bytes
                </span>
                 
              </td>
              <td>
                 
                <span>
                  400
                   bytes
                </span>
              </td>
            </tr>
            <tr>
              <td>
                Total
              </td>
              <td>
                 
                2
                 
              </td>
              <td>
                 
                <span>
                  1500
                   bytes
                </span>
                 
              </td>
              <td>
                 
                <span>
                  1200
                   bytes
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      data-testid="js-usage"
    >
      JS Usage
    </div>
    <div>
      <div>
        Resource Info
      </div>
      <div
        class="w-full"
      >
        <div
          class="mb-2 flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
            title="Copy table"
            type="button"
          >
            <svg
              class="lucide lucide-copy h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Copy table
            </span>
          </button>
        </div>
        <table>
          <thead>
            <tr>
              <th />
              <th>
                Mobile
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                 
                Number of Requests
                 
              </td>
              <td>
                2
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Fonts
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Scripts
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Stylesheets
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Main Document Transfer Size
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Total Byte Weight
                 
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</details>
`;

exports[`CWVMetricsSummary > renders Summary Metrics when items have metrics and diagnostics 1`] = `
<details>
  <summary
    class="flex flex-col gap-2"
  >
    <h3
      class="text-xl font-semibold"
    >
      Summary Metrics
    </h3>
  </summary>
  <div
    class="grid grid-cols-1 gap-3 py-3  md:grid-cols-2 lg:grid-cols-3"
  >
    <div>
      <div>
        Core Web Vitals
      </div>
      <div
        class="w-full"
      >
        <div
          class="mb-2 flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
            title="Copy table"
            type="button"
          >
            <svg
              class="lucide lucide-copy h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Copy table
            </span>
          </button>
        </div>
        <table>
          <thead>
            <tr>
              <th />
              <th>
                Mobile
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                 
                First Contentful Paint
                 
              </td>
              <td>
                <span>
                  500
                   ms
                </span>
              </td>
            </tr>
            <tr>
              <td>
                 
                Largest Contentful Paint
                 
              </td>
              <td>
                <span>
                  1500
                   ms
                </span>
              </td>
            </tr>
            <tr>
              <td>
                 
                Total Blocking Time
                 
              </td>
              <td>
                <span>
                  100
                   ms
                </span>
              </td>
            </tr>
            <tr>
              <td>
                 
                Cumulative Layout Shift
                 
              </td>
              <td>
                0.05
              </td>
            </tr>
            <tr>
              <td>
                 
                Cumulative Layout Shift (Main Frame)
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Speed Index
                 
              </td>
              <td>
                <span>
                  1200
                   ms
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
      <div>
        Number of Tasks
      </div>
      <div
        class="w-full"
      >
        <div
          class="mb-2 flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
            title="Copy table"
            type="button"
          >
            <svg
              class="lucide lucide-copy h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Copy table
            </span>
          </button>
        </div>
        <table>
          <thead>
            <tr>
              <th />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                 
                Number of Tasks over 10ms
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Tasks over 25ms
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Tasks over 50ms
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Tasks over 100ms
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Tasks over 500ms
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Top Level Tasks
                 
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
      <div>
        LCP info
      </div>
      <div
        class="w-full"
      >
        <div
          class="mb-2 flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
            title="Copy table"
            type="button"
          >
            <svg
              class="lucide lucide-copy h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Copy table
            </span>
          </button>
        </div>
        <table>
          <thead>
            <tr>
              <th />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                 
                LCP Load Start
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                LCP Load End
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                LCP Invalidated
                 
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
      <div>
        Timings info
      </div>
      <div
        class="w-full"
      >
        <div
          class="mb-2 flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
            title="Copy table"
            type="button"
          >
            <svg
              class="lucide lucide-copy h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Copy table
            </span>
          </button>
        </div>
        <table>
          <thead>
            <tr>
              <th />
              <th>
                Mobile
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                 
                First Contentful Paint
                 
              </td>
              <td>
                <span>
                  500
                   ms
                </span>
              </td>
            </tr>
            <tr>
              <td>
                 
                First contentful paint all frames
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Max Potential FID
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Total Blocking Time
                 
              </td>
              <td>
                <span>
                  100
                   ms
                </span>
              </td>
            </tr>
            <tr>
              <td>
                 
                Largest Contentful Paint
                 
              </td>
              <td>
                <span>
                  1500
                   ms
                </span>
              </td>
            </tr>
            <tr>
              <td>
                 
                Speed Index
                 
              </td>
              <td>
                <span>
                  1200
                   ms
                </span>
              </td>
            </tr>
            <tr>
              <td>
                 
                Interactive
                 
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div>
      <div>
        Observed Events
      </div>
      <div
        class="w-full"
      >
        <div
          class="mb-2 flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
            title="Copy table"
            type="button"
          >
            <svg
              class="lucide lucide-copy h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Copy table
            </span>
          </button>
        </div>
        <table>
          <thead>
            <tr>
              <th />
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                 
                Observed Navigation Start
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Observed First Paint
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Observed First Contentful Paint
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Observed First Contentful Paint All Frames
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Observed Trace End
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Observed Load
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Observed DOM Content Loaded
                 
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      data-testid="js-usage"
    >
      JS Usage
    </div>
    <div>
      <div>
        Resource Info
      </div>
      <div
        class="w-full"
      >
        <div
          class="mb-2 flex justify-end"
        >
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
            title="Copy table"
            type="button"
          >
            <svg
              class="lucide lucide-copy h-4 w-4"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="14"
                rx="2"
                ry="2"
                width="14"
                x="8"
                y="8"
              />
              <path
                d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
              />
            </svg>
            <span
              class="sr-only"
            >
              Copy table
            </span>
          </button>
        </div>
        <table>
          <thead>
            <tr>
              <th />
              <th>
                Mobile
              </th>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td>
                 
                Number of Requests
                 
              </td>
              <td>
                10
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Fonts
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Scripts
                 
              </td>
              <td>
                5
              </td>
            </tr>
            <tr>
              <td>
                 
                Number of Stylesheets
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Main Document Transfer Size
                 
              </td>
            </tr>
            <tr>
              <td>
                 
                Total Byte Weight
                 
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</details>
`;
